--- a/Urna/Urna/app/src/main/java/View/TelaMenu.form
+++ b/Urna/Urna/app/src/main/java/View/TelaMenu.form
@@ -121,7 +121,7 @@
             <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="ff" green="ff" red="ff" type="rgb"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Finalizar Vota&#xe7;&#xe3;o"/>
+            <Property name="text" type="java.lang.String" value="Finalizar Votacao"/>
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton2ActionPerformed"/>
