--- a/Urna/Urna/app/src/main/java/View/TelaMenu.form
+++ b/Urna/Urna/app/src/main/java/View/TelaMenu.form
@@ -64,7 +64,7 @@
                       <Component id="botaoFinalizar" alignment="0" max="32767" attributes="0"/>
                       <Component id="botaoResultado" alignment="0" max="32767" attributes="0"/>
                   </Group>
-                  <EmptySpace pref="196" max="32767" attributes="0"/>
+                  <EmptySpace pref="198" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -136,6 +136,7 @@
               <Color blue="ff" green="ff" red="ff" type="rgb"/>
             </Property>
             <Property name="text" type="java.lang.String" value="Mostrar Resultado"/>
+            <Property name="enabled" type="boolean" value="false"/>
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="botaoResultadoActionPerformed"/>
